--- a/index.html
+++ b/index.html
@@ -1,327 +1,356 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Scam the Scammer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CyberShield</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #0a1024;
-      color: #ffffff;
-    }
+      body {
+        font-family: 'Poppins', sans-serif;
+        background-color: #0a1024;
+        color: #ffffff;
+        line-height: 1.6;
+      }
 
-    header {
-      background-color: #08142e;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+      header {
+        background: linear-gradient(90deg, #08142e, #0d1b3d);
+        padding: 15px 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.6);
+      }
 
-    .logo-section {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+      .logo-section {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
 
-    .logo-section img {
-      height: 36px;
-    }
+      .logo-section img {
+        height: 40px;
+        border-radius: 8px;
+      }
 
-    .logo-text {
-      font-size: 22px;
-      font-weight: 700;
-      color: #00d1b2;
-    }
+      .logo-text {
+        font-size: 24px;
+        font-weight: 700;
+        color: #00f2c3;
+      }
 
-    nav {
-      display: flex;
-      gap: 25px;
-      align-items: center;
-    }
+      nav {
+        display: flex;
+        gap: 25px;
+        align-items: center;
+        padding-right: 575px;
+      }
 
-    nav a {
-      text-decoration: none;
-      color: #ffffff;
-      font-weight: 500;
-      font-size: 16px;
-    }
+      nav a {
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 20px;
+        transition: color 0.3s;
+      }
 
-    nav a:hover {
-      color: #00d1b2;
-    }
+      nav a:hover { color: #00f2c3; }
 
-    .more-dropdown {
-      position: relative;
-    }
+      .more-dropdown {
+        position: relative;
+      }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      top: 35px;
-      background-color: #12223d;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-    }
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        top: 35px;
+        background-color: #142745;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+      }
 
-    .more-dropdown:hover .dropdown-content {
-      display: block;
-    }
+      .more-dropdown:hover .dropdown-content { display: block; }
 
-    .dropdown-content a {
-      display: block;
-      padding: 8px 12px;
-      text-decoration: none;
-      color: white;
-    }
+      .dropdown-content a {
+        display: block;
+        padding: 8px 14px;
+        text-decoration: none;
+        color: white;
+        font-size: 15px;
+      }
 
-    .dropdown-content a:hover {
-      background-color: #1f2f4a;
-    }
+      .dropdown-content a:hover { background-color: #1d3557; }
 
-    .auth-buttons {
-      display: flex;
-      gap: 10px;
-    }
+      .scrolling-info {
+        background-color: #f1f2f5;
+        overflow: hidden;
+        white-space: nowrap;
+        padding: 10px 0;
+        border-top: 1px solid #12223d;
+        border-bottom: 1px solid #12223d;
+      }
 
-    .auth-buttons button {
-      padding: 7px 15px;
-      border: none;
-      border-radius: 20px;
-      font-weight: 600;
-      cursor: pointer;
-      font-size: 14px;
-    }
+      .scrolling-info p {
+        display: inline-block;
+        padding-left: 100%;
+        animation: scrollText 18s linear infinite;
+        font-size: 16px;
+        color: #131313;
+      }
 
-    .login-btn {
-      background-color: #00d1b2;
-      color: white;
-    }
+      @keyframes scrollText {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-100%); }
+      }
 
-    .signup-btn {
-      background-color: transparent;
-      color: #00d1b2;
-      border: 2px solid #00d1b2;
-    }
+      .hero {
+        background: url('scam.jpg') no-repeat center center/cover;
+        min-height: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 60px 30px;
+      }
 
-    .scrolling-info {
-      background-color: #12223d;
-      overflow: hidden;
-      white-space: nowrap;
-      padding: 10px 0;
-    }
+      .hero-content {
+        background-color: rgba(10, 20, 40, 0.85);
+        padding: 40px;
+        border-radius: 16px;
+        max-width: 600px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      }
 
-    .scrolling-info p {
-      display: inline-block;
-      padding-left: 100%;
-      animation: scrollText 20s linear infinite;
-      font-size: 16px;
-      color: #f8fafc;
-    }
+      .hero-content h1 {
+        font-size: 42px;
+        margin-bottom: 15px;
+        color: #ffffff;
+      }
 
-    @keyframes scrollText {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
-    }
+      .hero-content p {
+        font-size: 18px;
+        margin-bottom: 25px;
+        color: #c9d6f2;
+      }
 
-    .hero {
-      background: url('scam.jpg') no-repeat center center/cover;
-      min-height: 500px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 60px 30px;
-    }
+      .hero-content button {
+        background: linear-gradient(to right, #00f2c3, #4facfe);
+        color: #0f172a;
+        padding: 12px 26px;
+        border: none;
+        border-radius: 30px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: background 0.4s;
+      }
 
-    .hero-content {
-      background-color: rgba(8, 20, 46, 0.75);
-      padding: 40px;
-      border-radius: 12px;
-      max-width: 600px;
-    }
+      .hero-content button:hover {
+        background: linear-gradient(to right, #4facfe, #00f2c3);
+      }
 
-    .hero-content h1 {
-      font-size: 40px;
-      margin-bottom: 15px;
-      color: #ffffff;
-    }
+      .threats-section, .news-section, .tips-section, .why-section {
+        padding: 60px 20px;
+        background-color: #0f172a;
+      }
 
-    .hero-content p {
-      font-size: 16px;
-      margin-bottom: 20px;
-      color: #d1e7f2;
-    }
+      .threats-section h2, .news-section h2, .tips-section h2, .why-section h2 {
+        text-align: center;
+        color: #00f2c3;
+        font-size: 30px;
+        margin-bottom: 40px;
+      }
 
-    .hero-content button {
-      background-color: #00d1b2;
-      color: #0f172a;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 30px;
-      font-size: 16px;
-      font-weight: 600;
-      cursor: pointer;
-    }
+      .threats-container, .news-container, .tips-container, .features {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 25px;
+      }
 
-    .threats-section {
-      padding: 40px;
-      background-color: #0f172a;
-    }
+      .threat-card, .news-card, .tip-card, .feature-box {
+        background-color: #152a4f;
+        padding: 20px;
+        border-radius: 16px;
+        width: 300px;
+        box-shadow: 0 6px 16px rgba(0,0,0,0.4);
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
 
-    .threats-section h2 {
-      text-align: center;
-      color: #00d1b2;
-      margin-bottom: 30px;
-    }
+      .news-card:hover, .threat-card:hover, .tip-card:hover, .feature-box:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+      }
 
-    .threats-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
+      .threat-card img, .feature-box img, .tip-card img {
+        width: 100%;
+        border-radius: 10px;
+      }
 
-    .threat-card {
-      width: 300px;
-      background-color: #12223d;
-      padding: 20px;
-      border-radius: 10px;
-    }
+      .news-card h3, .tip-card h4, .feature-box h4, .threat-card h3 {
+        color: #00f2c3;
+        margin-top: 14px;
+        font-size: 20px;
+      }
 
-    .threat-card img {
-      width: 100%;
-      border-radius: 10px;
-    }
+      .news-card p, .tip-card p, .feature-box p, .threat-card p {
+        color: #d1e7f2;
+        font-size: 15px;
+        margin: 10px 0;
+      }
 
-    .threat-card h3 {
-      color: #00d1b2;
-      margin-top: 10px;
-    }
+      .news-card a {
+        text-decoration: none;
+        color: #4facfe;
+        font-weight: 500;
+      }
 
-    .threat-card p {
-      color: #d1e7f2;
-    }
+      .news-card a:hover { text-decoration: underline; }
 
-    .threat-card a {
-      color: #00d1b2;
-      text-decoration: none;
-    }
+      footer {
+        background: linear-gradient(to right, #08142e, #0d1b3d);
+        color: #cbd5e1;
+        padding: 40px 20px;
+        text-align: center;
+      }
 
-    footer {
-      background-color: #08142e;
-      color: #cbd5e1;
-      padding: 30px 20px;
-      text-align: center;
-    }
+      footer h3 {
+        color: #00f2c3;
+        margin-bottom: 12px;
+        font-size: 20px;
+      }
 
-    footer h3 {
-      color: #00d1b2;
-      margin-bottom: 10px;
-    }
+      footer p { font-size: 14px; line-height: 1.5; }
 
-    footer p {
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="logo-section">
-      <img src="logo.jpg" alt="Logo" />
-      <div class="logo-text">Scam the Scammer</div>
+      @media (max-width: 768px) {
+        .features, .tips-container, .threats-container, .news-container {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .hero-content h1 { font-size: 32px; }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="logo-section">
+        <img src="logo.jpg" alt="Logo" />
+        <div class="logo-text">CyberShield</div>
+      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="news.html">News</a>
+        <a href="scanner.html">Scanner</a>
+        <div class="more-dropdown">
+          <a href="#">More ▼</a>
+          <div class="dropdown-content">
+            <a href="attack.html">Attacks</a>
+            <a href="#">Guide</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="scrolling-info">
+      <p>⚠️ Beware of fake job offers, phishing emails, OTP scams, UPI frauds, and QR code traps. Stay alert. Stay protected. — CyberShield.in</p>
     </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">News</a>
-      <a href="scanner.html">Scanner</a>
-      <div class="more-dropdown">
-        <a href="#">More ▼</a>
-        <div class="dropdown-content">
-          <a href="#">Attacks</a>
-          <a href="#">Guide</a>
-          <a href="#">Contact</a>
+
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Secure Your Virtual World</h1>
+        <p>Knowledge is the key to safety. Learn how to identify scams and stay protected online.</p>
+        <button onclick="location.href='blogs.html'">Explore Blogs</button>
+      </div>
+    </section>
+
+    <section class="threats-section">
+      <h2>Cyber Threats You Should Know</h2>
+      <div class="threats-container">
+        <!-- Add threat cards here -->
+      </div>
+    </section>
+
+    <section class="why-section">
+      <h2>Why Choose CyberShield?</h2>
+      <p style="text-align: center;">In an age where digital threats evolve daily, CyberShield helps you stay one step ahead.</p>
+      <div class="features">
+        <div class="feature-box">
+          <img src="awareness.jpg" alt="Awareness">
+          <h4>Real-time Awareness</h4>
+          <p>Stay updated with the latest scams and frauds happening globally.</p>
+        </div>
+        <div class="feature-box">
+          <img src="protection.jpg" alt="Protection">
+          <h4>Practical Guidance</h4>
+          <p>Step-by-step guides to recognize and avoid cyber traps.</p>
+        </div>
+        <div class="feature-box">
+          <img src="community.png" alt="Community">
+          <h4>Trusted Community</h4>
+          <p>Learn from real cases and shared experiences.</p>
         </div>
       </div>
-    </nav>
-    <div class="auth-buttons">
-      <button class="login-btn" onclick="location.href='login.html'">Login</button>
-      <button class="signup-btn" onclick="location.href='signup.html'">Sign Up</button>
-    </div>
-  </header>
+    </section>
 
-  <div class="scrolling-info">
-    <p>⚠️ Beware of fake job offers, phishing emails, OTP scams, UPI frauds, and QR code traps. Stay alert. Stay protected. — ScamTheScammer.in</p>
-  </div>
+    <section class="news-section">
+      <h2>Latest Cyber News</h2>
+      <div class="news-container">
+        <div class="news-card">
+          <h3>Major Data Breach Hits Telecom Giant</h3>
+          <p>Millions of customer records exposed in one of the biggest cyber breaches of the year.</p>
+          <a href="news1.html">Read more →</a>
+        </div>
+        <div class="news-card">
+          <h3>WhatsApp Scam Targets Small Businesses</h3>
+          <p>Fake verification codes and OTP frauds on the rise in India’s business circles.</p>
+          <a href="news2.html">Read more →</a>
+        </div>
+        <div class="news-card">
+          <h3>New Android Malware Steals Banking Info</h3>
+          <p>A new wave of Android malware is affecting financial apps globally. Update your devices now.</p>
+          <a href="news3.html">Read more →</a>
+        </div>
+      </div>
+    </section>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Secure Your Virtual World</h1>
-      <p>Knowledge is the key to safety. Learn how to identify scams and stay protected online.</p>
-      <button onclick="location.href='blogs.html'">Explore Blogs</button>
-    </div>
-  </section>
+    <section class="tips-section">
+      <h2>Tips to Stay Safe Online</h2>
+      <div class="tips-container">
+        <div class="tip-card">
+          <img src="strong password.jpg" alt="Strong Passwords">
+          <h4>Use Strong Passwords</h4>
+          <p>Mix letters, numbers & symbols. Avoid names or birthdays.</p>
+        </div>
+        <div class="tip-card">
+          <img src="verify links.webp" alt="Verify Links">
+          <h4>Double-check Links</h4>
+          <p>Fake URLs often look like real ones. Hover before clicking.</p>
+        </div>
+        <div class="tip-card">
+          <img src="update softwares.jpg" alt="Update Software">
+          <h4>Update Regularly</h4>
+          <p>Outdated systems are easy targets. Keep everything up-to-date.</p>
+        </div>
+        <div class="tip-card">
+          <img src="secure banking.avif" alt="Secure Banking">
+          <h4>Beware of UPI Frauds</h4>
+          <p>Never share OTPs. Banks never ask for passwords.</p>
+        </div>
+      </div>
+    </section>
 
-  <section class="threats-section">
-    <h2>Cyber Threats You Should Know</h2>
-    <div class="threats-container">
-      <div class="threat-card">
-        <img src="images/malware.jpg" alt="Malware" />
-        <h3>Malware Attack</h3>
-        <p>Malicious software that damages or steals your data silently.</p>
-        <a href="malware.html">Learn more →</a>
-      </div>
-      <div class="threat-card">
-        <img src="images/phishing.jpg" alt="Phishing" />
-        <h3>Phishing</h3>
-        <p>Fraudulent messages trying to steal your passwords or money.</p>
-        <a href="phishing.html">Learn more →</a>
-      </div>
-      <div class="threat-card">
-        <img src="images/ransomware.jpg" alt="Ransomware" />
-        <h3>Ransomware</h3>
-        <p>Your data is locked and a ransom is demanded to get it back.</p>
-        <a href="ransomware.html">Learn more →</a>
-      </div>
-      <div class="threat-card">
-        <img src="images/simswap.jpg" alt="SIM Swap" />
-        <h3>SIM Swap Fraud</h3>
-        <p>Hackers take over your phone number to access accounts.</p>
-        <a href="simswap.html">Learn more →</a>
-      </div>
-      <div class="threat-card">
-        <img src="images/qrcode.jpg" alt="QR Scam" />
-        <h3>QR Code Scam</h3>
-        <p>Fraud QR codes trick users into unsafe payments or data leaks.</p>
-        <a href="qrscams.html">Learn more →</a>
-      </div>
-      <div class="threat-card">
-        <img src="images/social.jpg" alt="Social Engineering" />
-        <h3>Social Engineering</h3>
-        <p>Tricking users into revealing confidential information.</p>
-        <a href="social.html">Learn more →</a>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <h3>About This Website</h3>
-    <p>
-      Scam the Scammer is dedicated to spreading awareness about cyber frauds, scams, and safe digital habits.
-    </p>
-    <p>📧 Contact: support@scamthescammer.in</p>
-  </footer>
-</body>
-</html>
+    <footer>
+      <h3>About This Website</h3>
+      <p>CyberShield is dedicated to spreading awareness about cyber frauds, scams, and safe digital habits.</p>
+      <p>📧 Contact: support@cybershield.in</p>
+    </footer>
+  </body>
+  </html>
