--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <a href="#">More ▼</a>
         <div class="dropdown-content">
           <a href="attack.html">Attacks</a>
-          <a href="#">Guide</a>
-          <a href="#">Contact</a>
+          <a href="guide.html">Guide</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
     </nav>
