--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@ body {
                 <div class="slide" style="background-image: url('welcome.png');">
                 </div>
 
-                <div class="slide" style="background-image: url('welcome2.jpg');">
+                <div class="slide" style="background-image: url('CyberAttack.png');">
                 </div>
-                <div class="slide" style="background-image: url('Cybersecurity-Awareness-Month-Types-of-Cybercrime.jpg');">
+                <div class="slide" style="background-image: url('CyberNews.png');">
                 </div>
                 <div class="slide" style="background-image: url('What-is-Cyber-Security.jpg');">
                 </div>
